--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-startup-image" href="https://addsoupbase.github.io/cute-emojis/emojis/1275614671948218370.gif">
     <script type="module" blocking="render">
-        import '../csshelper.js'
+        import 'https://addsoupbase.github.io/csshelper.js'
     </script>
     <style>
 
