--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <script>
+        addEventListener('unhandledrejection',console.warn)
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMOJI OVERLOAD</title>
@@ -56,10 +59,11 @@
     <style>
         body {
             text-align: center;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
             image-rendering: pixelated;
         }
-
+        :root, button {
+            font-family: var(--system-font);
+        }
         img {
             display: inline-block;
             width: 90px;
@@ -80,7 +84,6 @@
             border-width: 2px;
             border-style: solid;
             text-align: center;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         img[data-src="./emojis/1314222584795107399.gif"] {
@@ -184,7 +187,14 @@
         import $ from '../yay.js'
         import { download } from '../handle.js'
         let local = location.href.includes('localhost')
-        local && (window.download = _click, import('https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js'))
+        if (local) {
+            $.body.afterbegin = $(`<button class="centerx">Download Local ZIP</button>`, {
+                events: {
+                    _click
+                }
+            })
+            import('https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js')
+        } 
         let all = []
         $.gid('imgrendering').on({
             change() {
